[metadata]
name = PAT-package
version = 0.0.1
author = Justin Zhang
author_email = justinz@andrew.cmu.edu
description = The program used for the Privilege Awareness Task
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gpnlab/Privilege-Recognition-Task
project_urls =
    Bug Tracker = https://github.com/gpnlab/Privilege-Recognition-Task/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = PAT
packages = find:
python_requires = >=3.6

[options.packages.find]
where = PAT
